--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Iniziamo a creare le API per il nostro blog:\r Iniziate con un nuovo progetto Express + Prisma.",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "migrate": "prisma migrate dev --name",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +18,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.3",
